Large batch of Accessibility and HTML improvements (#645)
* Make menus keyboard accessible

* Remove event from French chapter

* Add skip link

* Fix authors heading

* Remove bullt point colouring as low contrast which is bad for accessibility

* Move article tag to cover just the article

* Make Methodology index menu accessible

* Only use <section> for distinct blocks with a heading

* Revert "Fix authors heading"

This reverts commit 6cf191bf4967e25628a2e14fe402d0a7b8a29bb8.

* Fix non-chapters

* Higher contrast colours for code

* Fix typos

* Move Authors to h2 heading and style like h4

* Remove Avatar alt attribute to avoid "Adjacent links go to the same URL"

* Use a <main> element for chapters

* Use <main> element for main content

* Revert "Remove Avatar alt attribute to avoid "Adjacent links go to the same URL""

This reverts commit b9f637f1533f34142c94a4257ea05feac46e4bd5.

* Add height and width for logo

* Add height and width to menu icons

* Compress close.png

* toc_image_widths

* tab_spaces

* Fix Methodology overflow issues

* Add titles for navigations, remove <asides>, make skip link translatable

* Navigation title translations

* Fix accessibility issues with Methodology chapter

* Better Index heading click

* Fix tab order of HTTP Archive logo

* Fix index clicks

* Fix index button

* Fix index header

* Optimised images with calibre/image-actions

* Fixes for new Japanese CDN chapter

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/src/static/css/2019.css
+++ b/src/static/css/2019.css
@@ -722,6 +722,31 @@ p.copyright a {
   white-space: nowrap; /* added line */
 }
 
+#skiptocontent a {
+  padding: 6px;
+  position: absolute;
+  top: -40px;
+  left: 0px;
+  color: white;
+  border-right: 1px solid white;
+  border-bottom: 1px solid white;
+  border-bottom-right-radius: 8px;
+  background: #f7f779;
+  color: #333;
+  -webkit-transition: top 1s ease-out;
+  transition: top 1s ease-out;
+  z-index: 100;
+}
+
+#skiptocontent a:focus {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  outline-color: transparent;
+  -webkit-transition: top .1s ease-in;
+  transition: top .1s ease-in;
+}
+
 /* Mobile View */
 @media (max-width: 600px) {
    body, p, td, th, code, li {
