--- a/src/templates/es/2019/base.html
+++ b/src/templates/es/2019/base.html
@@ -5,10 +5,12 @@
 {% endblock %}
 
 {% block content%}
+  <div id="skiptocontent"><a href="#maincontent">Saltar navegación</a></div>
   {% block header %}
     <header class="alt-bg">
-      <a class="navigation-logo" href="{{ url_for('home', year=year, lang=lang) }}"><img src="/static/images/logo.svg" alt="Web Almanac por HTTP Archive"></a>
-      <nav>
+      <a class="navigation-logo" href="{{ url_for('home', year=year, lang=lang) }}"><img src="/static/images/logo.svg" alt="Web Almanac por HTTP Archive" height="39" width="202"></a>
+      <nav title="
+      Navegación de página">
         <a href="{{ url_for('table_of_contents', year=year, lang=lang) }}">Tabla de Contenidos</a>
         <a href="{{ url_for('contributors', year=year, lang=lang) }}">Contribuidores</a>
         <a href="{{ url_for('methodology', year=year, lang=lang) }}">Metodología</a>
@@ -25,9 +27,9 @@
         {{ language_switcher() }}
       </div>
       <button type="button" class="menu-btn" aria-label="Menú">
-        <img class="menu-icon" src="/static/images/menu.png" data-src-close="/static/images/close.png" alt="" />
+        <img class="menu-icon" src="/static/images/menu.png" data-src-close="/static/images/close.png" alt="" height="21" width="27" />
       </button>
-      <nav class="menu">
+      <nav title="Menú de página" class="menu">
         <a href="{{ url_for('table_of_contents', year=year, lang=lang) }}">Tabla de Contenidos</a>
         <a href="{{ url_for('contributors', year=year, lang=lang) }}">Contribuidores</a>
         <a href="{{ url_for('methodology', year=year, lang=lang) }}">Metodología</a>
@@ -49,7 +51,7 @@
     </div>
     {% if request.endpoint == 'home' %}
     <div class="intro-container">
-      <div class="intro">
+      <div id="maincontent" class="intro">
         <div class="intro-year">2019</div>
         <h1 class="title title-alt">Web Almanac</h1>
         <h2>
@@ -78,17 +80,17 @@
 
   {% block footer %}
     <footer class="alt-bg">
-      <a class="navigation-logo home-logo" href="{{ url_for('home', year=year, lang=lang) }}"><img src="/static/images/logo.svg" alt="Web Almanac por HTTP Archive"></a>
-      <a class="navigation-logo ha-logo" href="https://httparchive.org">
-        <img src="/static/images/ha-home.svg" alt="Página de Inicio HTTP Archive" height="35" width="70">
-      </a>
+      <a class="navigation-logo home-logo" href="{{ url_for('home', year=year, lang=lang) }}"><img src="/static/images/logo.svg" alt="Web Almanac por HTTP Archive" height="39" width="202"></a>
       <nav class="nav-items">
         <a href="{{ url_for('table_of_contents', year=year, lang=lang) }}">Tabla de Contenidos</a>
         <a href="{{ url_for('contributors', year=year, lang=lang) }}">Contribuidores</a>
         <a href="{{ url_for('methodology', year=year, lang=lang) }}">Metodología</a>
         {{ language_switcher() }}
       </nav>
-      <p class="copyright">Copyright © 2019 Web Almanac. Todos los derechos reservados.</p>
+      <p class="copyright"><span>© 2019 Web Almanac. Con licencia <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/master/LICENSE">Apache 2.0</a>.</span></p>
+      <a class="navigation-logo ha-logo" href="https://httparchive.org">
+        <img src="/static/images/ha-home.svg" alt="Página de Inicio HTTP Archive" height="35" width="70">
+      </a>
       <div class="social-media">
         <a href="https://twitter.com/HTTPArchive" class="twitter">
           <img src="/static/images/twitter.png" alt="Twitter" height="65" width="80" loading="lazy" />
@@ -123,6 +125,7 @@
           var menuOpen = document.body.classList.toggle('menu-open');
           menuIcon.src = menuOpen ? menuIconSrcClose : menuIconInitialSrc;
         });
+
       })();
     </script>
   {% endblock %}
