Image size fixes (#648)
* Image size for chapter banners

* French chapters + typo fix

* get_height_and_width_the_right_way_around

* Add img size attributes for all chapter images

* Add size to Methodology chapter

* Add image sizes to index page

* Add query plan to cache bust this breaking change

* Consistent ordering of height and width

* Change from using data-src to data-iframe to fix iOS reader mode

--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -137,6 +137,7 @@
 
 .content-banner {
   max-width: 100%;
+  height: auto;
   border-radius: 8px;
   border: 1px solid #E5E5E5;
 }
@@ -270,10 +271,13 @@ aside, .note {
   font-style: italic;
 }
 
-img,
 table,
 figure {
   max-width: 100%;
+}
+img {
+  max-width: 100%;
+  height: auto;
 }
 figure {
   display: flex;
@@ -404,6 +408,7 @@ figure .fig-desktop {
   figure .fig-mobile {
     display: block;
     max-width: 100%;
+    height: auto;
   }
 }
 
