--- a/src/templates/en/2019/contributors.html
+++ b/src/templates/en/2019/contributors.html
@@ -481,5 +481,5 @@
 
   </script>
   <!-- add chapter.js to handle print mode and avoid duplicating code -->
-  <script src='/static/js/chapter.js' defer></script>
+  <script src='/static/js/chapter.js?v=2' defer></script>
 {% endblock %}
