--- a/src/templates/fr/2019/index.html
+++ b/src/templates/fr/2019/index.html
@@ -130,9 +130,9 @@
     </div>
     <div class="people">
       <div class="people-number">{{ contributors }}</div>
-      <img id="character-markup" class="character" src="/static/images/character-markup.png" alt="" loading="lazy" />
-      <img id="character-star" class="character" src="/static/images/character-star.png" alt="" loading="lazy" />
-      <img id="character-hat" class="character" src="/static/images/character-hat.png" alt="" loading="lazy" />
+      <img id="character-markup" class="character" src="/static/images/character-markup.png" alt="" width="154" height="252" loading="lazy" />
+      <img id="character-star" class="character" src="/static/images/character-star.png" alt="" width="245" height="254" loading="lazy" />
+      <img id="character-hat" class="character" src="/static/images/character-hat.png" alt="" width="186" height="207" loading="lazy" />
     </div>
   </section>
   <section class="methodology-container">
@@ -162,7 +162,7 @@
       <a href="{{ url_for('methodology', year=year, lang=lang) }}" class="alt btn">
         En savoir plus sur la Méthodologie
       </a>
-      <img class="methodology-characters" src="/static/images/methodology-characters.png" alt="" loading="lazy" />
+      <img class="methodology-characters" src="/static/images/methodology-characters.png" alt="" width="984" height="354" loading="lazy" />
     </div>
   </section>
 </div>
