FR - Translation "Resource Hints" Chapter (#652)
* FR - Translation "Resource Hints" Chapter

* Update src/content/fr/2019/resource-hints.md

Co-Authored-By: Barry Pollard <barry_pollard@hotmail.com>

* Update src/content/fr/2019/resource-hints.md

Co-Authored-By: Barry Pollard <barry_pollard@hotmail.com>

* Update src/templates/fr/2019/chapters/resource-hints.html

Co-Authored-By: Barry Pollard <barry_pollard@hotmail.com>

* Replace invisible nbsp with explicit nbsp

* Minor fixes

* Update src/templates/fr/2019/chapters/resource-hints.html

Co-Authored-By: Barry Pollard <barry_pollard@hotmail.com>

* Update src/content/fr/2019/resource-hints.md

Co-Authored-By: Barry Pollard <barry_pollard@hotmail.com>

* Fixes relative to @nico3333fr's feedback (thanks, mate)

* Fixes relative to @nico3333fr's feedback - part 2

Co-authored-by: Barry Pollard <barry_pollard@hotmail.com>

--- a/src/templates/fr/2019/table_of_contents.html
+++ b/src/templates/fr/2019/table_of_contents.html
@@ -206,7 +206,7 @@
       "Caching": "Mise en cache",
       "CDN": "CDN",
       "Page Weight": "Poids des pages",
-      "Resource Hints": "Resource Hints",
+      "Resource Hints": "Indices de Ressources",
       "HTTP/2": "HTTP/2"
     }
   %}
